# medulla

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml  update-flake-hashes.yml
docs/: commit-command.md  embeddings_plan.md
example/: .gitignore  AGENTS.md  verify.sh
example/.medulla/: synapses.parquet
scripts/: demo.sh  update-flake-hashes.sh
src/: main.rs
src/commands/: commit.rs  embed.rs  init.rs  learn.rs  mod.rs  query.rs  run.rs  think.rs
src/core/: mod.rs
src/templates/: AGENTS.md
tests/: integration.rs
tests/fixtures/: sample.ndjson
