[package]
name = "med"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
polars = { version = "0.53", features = [
    "lazy", "json", "parquet", "temporal", "strings",
    "dtype-full", "log", "is_in", "regex"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
sha2 = "0.10"
tabled = "0.20.0"
uuid = "1.22.0"

[dev-dependencies]
tempfile = "3.8"
