[package]
name = "med"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
polars = { version = "0.53", features = [
    "lazy", "json", "parquet", "temporal", "strings",
    "dtype-full", "log", "is_in", "regex"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
sha2 = "0.10"
tabled = "0.20.0"
uuid = "1.22.0"
rust-stemmers = "1.2.0"
fs2 = "0.4"
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub-native-tls"] }
ort = { version = "=2.0.0-rc.9" }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization (removes dead code across crates)
codegen-units = 1   # Compile everything together (slower compile, smaller binary)
panic = "abort"     # Remove panic unwinding code (saves space)
strip = true        # Strip debug symbols from the final binary
